# store_management_system

./: .editorconfig  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  APK_GUIDE.md  AUTO_START.bat  AUTO_START_GUIDE.txt  CHANGELOG.md  CONSTRAINT_FIX_SUMMARY.md  CONTRIBUTING.md  CURSOR_AI_GUIDE.md  DELETED_FILES.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  Dockerfile  ENGLISH_NAME_FIX.md  ENGLISH_ROLES_SUMMARY.md  EXE_FIXED.md  EXE_GUIDE.md  EXE_TEMPLATE_FIX.md  EXE_TROUBLESHOOTING.md  FINAL_FIX_SUMMARY.md  FINAL_GITHUB_GUIDE.md  FINAL_RESTRUCTURE_SUMMARY.md  FINAL_SOLUTION_SUMMARY.md  FINAL_SUMMARY.md  GITHUB_UPLOAD_GUIDE.md  INSTALLATION_GUIDE.md  INSTALL_AND_RUN.bat  INVOICE_IMPROVEMENTS.md  INVOICE_PRINT_FINAL_FIX.md  INVOICE_PRINT_FIX.md  LICENSE  MANIFEST.in  Makefile  POS_3x3_LAYOUT.md  POS_CART_FIXES.md  POS_DISPLAY_FIXES.md  POS_FEATURES.md  POS_FINAL_FIXES.md  (+58 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_EN.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: __init__.py
app/models/: database.py  settings_models.py  store_settings.py
app/static/: sw.js
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  dashboard.html  login.html
app/templates/categories/: edit.html  list.html  new.html
app/templates/data_management/: import.html  index.html
app/templates/invoices/: export.html  list.html  new.html  print_58mm.html  print_a4.html  view.html
app/templates/items/: edit.html  list.html  new.html
app/templates/mobile/: base.html  dashboard.html  login.html  pos.html
app/templates/purchases/: list.html  new.html  view.html
app/templates/reports/: daily.html  index.html  monthly.html  yearly.html
app/templates/sales/: list.html  new.html
app/templates/settings/: currency.html  payment_methods.html  pos.html  store.html  tax.html
app/templates/stock/: adjust.html  alerts.html
app/templates/tablet_pwa/: base.html  dashboard.html  login.html  pos.html
app/templates/users/: edit.html  list.html  new.html
app/utils/: auth.py  context_processors.py  payment_utils.py
app/views/: __init__.py  advanced_settings.py  api.py  auth.py  categories.py  data_management.py  invoices.py  items.py  main.py  purchases.py  reports.py  sales.py  settings.py  stock.py  users.py
